styles/nav.css
/******** MARK: Navigation Bar ********/

#skip-to-main-button {
    position: fixed;
    right: -1000px;
    top: -1000px;
}

nav {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 3.5rem;
    background-color: #0a0a0a;
}

@supports ( -webkit-backdrop-filter: none ) or ( backdrop-filter: none ) {
    nav {
        background-color: rgba(0, 0, 0, 0.5);
        -webkit-backdrop-filter: saturate(180%) blur(20px);
        backdrop-filter: saturate(180%) blur(20px);
    }
}

nav>div {
    display: flex;
}

.nav-left {
    display: inline-block;
    margin: auto auto auto 1rem;
}

.nav-left-inner {
    /* currently not needed */
}

.nav-right {
    display: inline-block;
    margin-right: 1rem;
    margin-top: auto;
    margin-bottom: auto;
}

.nav-ul {
    list-style-type: none;
}

.nav-item {
    display: inline-block;
    margin-left: 1.2rem;
}

.nav-image {
    width: 1rem;
    height: 1rem;
    position: relative;
    top: 0.1rem;
}

#nav-profile-picture {
    width: 1rem;
    height: 1rem;
    border: 1.5px solid rgba(128, 224, 224, 0.5);
    border-radius: 0.8rem;
    transform: scale(1.6);
    margin-right: 0.2rem;
}

.nav-link {
    text-decoration: none;
    color: white;
    font-size: 16px;
    
    transition: opacity 0.33s;
    -moz-transition: opacity 0.33s;
    -webkit-transition: opacity 0.33s;
    -ms-transition: opacity 0.33s;
}

.nav-link:hover {
    opacity: 0.5;
}

.nav-left .nav-link {
    color: #80E0E0;
}

#nav-right-button {
    display: none;
}

#nav-pulldown-menu {
    position: fixed;
    top: 3.5rem;
    left: 0;
    padding-bottom: 0.5rem;
    background-color: rgba(0, 0, 0, 0.4);
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    
    /* Transition */
    overflow: hidden;
    transition: opacity 0.33s, transform 0.33s;
    -moz-transition: opacity 0.33s, transform 0.33s;
    -webkit-transition: opacity 0.33s, transform 0.33s;
    -ms-transition: opacity 0.33s, transform 0.33s;
    
    /* Initial state */
    display: block;
    opacity: 0;
    transform: translateY(-50%) scaleY(0);
}

#nav-pulldown-menu .nav-item {
    display: block;
    margin-left: -1.6rem;
}

.menu-button-top,
.menu-button-bottom {
    position: relative;
    display: block;
    width: 20px;
    height: 1px;
    background: #e0e0e0;
    transition: transform 0.33s;
    left: 12px;
}

#nav-right-button,
#nav-right-button > .nav-link {
    width: 44px;
    height: 44px;
    margin-right: -11px;
}

.menu-button-top {
    top: 22px;
    transform: translateY(-3px);
}

.menu-button-bottom {
    top: 21px;
    transform: translateY(3px);
}

.menu-hidden-checkbox:checked ~ * .menu-button-top {
    transform: scaleX(1.1) scaleY(1.1) rotate(0.125turn);
}

.menu-hidden-checkbox:checked ~ * .menu-button-bottom {
    transform: scaleX(1.1) scaleY(1.1) rotate(-0.125turn);
}

.menu-hidden-checkbox {
    appearance: none;
    -webkit-appearance: none;

    position: absolute;
    width: 44px;
    height: 44px;
    z-index: 99999;
    opacity: 0;
}

.menu-hidden-checkbox:checked ~ #nav-pulldown-menu {
    opacity: 1.0;
    transform: translateY(0) scaleY(1);
    color: inherit;
}

@media (max-width: 799px) {
    #nav-right-button {
        display: inline-block;
    }
    
    #nav-right-menu {
        display: none;
        float: left;
        top: 4rem;
    }
}

@media (min-width: 800px) {
    #nav-pulldown-menu {
        display: none !important;
    }
}

#nav-pulldown-menu ul,
#nav-pulldown-menu li,
#nav-pulldown-menu .nav-link {
    width: 100%;
}

#nav-pulldown-menu li {
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

#nav-pulldown-menu li:last-of-type {
    border-bottom: none;
}

#nav-pulldown-menu .nav-link {
    display: inline-block;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

